# simutrans-dat-linter

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  release.toml
.claude/skills/setup-dev-env/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci-vscode.yml  ci.yml  release-vscode.yml  release.yml
docs/: analyze.md  assurance-ledger.md  config.md  fmt.md  keys.md  lint.md
editors/vscode/: .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/fixtures/: building-simple.dat.snap  comments.dat.snap  test-lint-config.toml  (+1 more)
src/: cli.rs  codes.rs  config.rs  couplings.rs  diagnostics.rs  formatter.rs  fs_walk.rs  i18n.rs  lib.rs  main.rs  param_expansion.rs  parser.rs  registry.rs  rules.rs
src/commands/: analyze.rs  common.rs  describe.rs  fmt.rs  init.rs  keys.rs  lint.rs  list.rs  mod.rs
src/formatter/: mod.rs  order.rs
src/rules/: bridge.rs  building.rs  citycar.rs  common.rs  crossing.rs  cursor.rs  factory.rs  field.rs  good.rs  ground.rs  groundobj.rs  keys.rs  menu.rs  misc.rs  mod.rs  pedestrian.rs  roadsign.rs  smoke.rs  sound.rs  symbol.rs  tree.rs  tunnel.rs  vehicle.rs  way.rs  way_obj.rs
tests/: bridge_lint.rs  building.rs  citycar_lint.rs  cli_integration.rs  codes_completeness.rs  couplings.rs  crossing_lint.rs  cursor_lint.rs  factory_lint.rs  field_lint.rs  fmt.rs  good_lint.rs  ground_lint.rs  groundobj_lint.rs  i18n.rs  menu_lint.rs  misc_lint.rs  obj_type_coverage.rs  parser.rs  pedestrian_lint.rs  real_data_regression.rs  roadsign_lint.rs  smoke_lint.rs  sound_lint.rs  symbol_lint.rs  tree_lint.rs  tunnel_lint.rs  vehicle_lint.rs  way_lint.rs  way_obj_lint.rs
(+17 files in other folders)
