[package]
name = "dat_linter"
version = "0.2.0"
edition = "2024"
description = "Static validator, formatter, and coupling-constraint analyzer for Simutrans .dat object definitions"
license = "MIT"
repository = "https://github.com/128na/simutrans-dat-linter"
readme = "README.md"
keywords = ["simutrans", "makeobj", "linter", "gamedev"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Simutrans の画像は常に PNG。デフォルトの全フォーマット（AVIF エンコーダ rav1e 等の
# 重い依存を含む）は不要なので PNG デコードのみに絞る。
image = { version = "0.25", default-features = false, features = ["png"] }
# color/suggestions機能（anstream/is-terminal/colorchoice/strsim等）は不要なため
# デフォルト機能を無効化し、CLI構築に必要な最小機能のみ有効化する。
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }
# 実際に配布されている .dat の一部（特に日本語コメント入りの古い pak128.japan 系）は
# Shift-JIS(CP932) で保存されている。UTF-8として不正な場合のフォールバックデコードに使う。
encoding_rs = "0.8"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
